src/components/About/About.css
.container {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  max-width: 1000px;
  margin: auto;
  padding: 50px 25px;
  margin-top: 20px;
  padding-left: 5rem;
}

.text-container {
  max-width: 800px;
  margin-bottom: 40px;
  padding: 0 10px;
}

.text-container h3 {
  font-size: 16px;
  letter-spacing: 2px;
  color: #777;
  text-transform: uppercase;
  margin: 0;
}

.text-container h2 {
  font-size: 32px;
  margin: 10px 0;
  font-weight: 300;
}

.text-container p {
  font-size: 16px;
  text-align: justify;
  color: #555;
  line-height: 1.5;
  letter-spacing: 1px;
  font-weight: 300;
  margin-top: 25px;
  padding: 0 10px;
}

.image-container {
  display: flex;
  flex-wrap: wrap;
  gap: 20px;
  margin-top: 20px;
  width: 106%;
  justify-content: center;
  padding-left: 5rem;
}


.image-container > div {
  flex: 1 1 200px;
  max-width: 220px;
  background: rgba(255, 255, 255, 0);
  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);
  border-radius: 10px;
  padding: 13px;
  text-align: center;
  transition: transform 0.3s ease-in-out;
  position: relative;
  border: 3px solid rgba(0, 0, 0, 0.1);
}

.image-container > div::after {
  content: "";
  position: absolute;
  bottom: 0;
  left: 50%;
  width: 0%;
  height: 2px;
  background-color: #882891d0;
  transition: width 0.3s ease-in-out;
  transform: translateX(-50%);
}

.image-container > div:hover::after {
  width: 80%;
}

.image-container > div:hover {
  transform: translateY(-5px);
}

.image-container img {
  width: 50px;
  height: 50px;
  margin-bottom: 10px;
}

.image-container h3 {
  font-size: 16px;
  color: #333;
  margin-top: 10px;
}


@media (max-width: 1024px) {
  .container {
    padding: 40px 20px;
    margin-top: 10px;
  }

  .text-container h2 {
    font-size: 28px;
  }

  .text-container p {
    font-size: 15px;
  }

  .image-container {
    gap: 15px;
  }
}

@media (max-width: 768px) {
  .container {
    padding: 30px 15px;
  }

  .text-container h2 {
    font-size: 24px;
  }

  .text-container p {
    font-size: 14px;
  }

  .image-container {
    gap: 10px;
  }
}

@media (max-width: 700px) {
  .container {
    margin-top: -400px;
    padding: 20px;
    align-items: center;
  }

  .text-container {
    padding: 0 5px;
  }

  .text-container h3,
  .text-container h2 {
    margin-right: 0;
    text-align: center;
  }

  .text-container p {
    font-size: 14px;
    margin-left: 0;
  }

  .image-container {
    margin: 0 auto;
    justify-content: center;
    gap: 15px;
    margin-left: -56px;
  }

  .image-container img {
    width: 40px;
    height: 40px;
  }
}

@media (max-width: 520px) {
  .image-container > div {
    flex: 1 1 100%;
    max-width: 100%;
  }

  .text-container h3,
  .text-container h2 {
    font-size: 1.485rem;
    margin-right: 0;
  }

  .text-container p {
    font-size: 12px;
  }

  .image-container img {
    width: 35px;
    height: 35px;
  }
}

@media (max-width: 480px) {
  .container {
    padding: 20px 10px;
  }

  .text-container h2 {
    font-size: 20px;
  }

  .text-container p {
    font-size: 12px;
  }

  .image-container img {
    width: 30px;
    height: 30px;
  }
}

@media (max-width: 336px) {
  .text-container {
      padding: 50px 5px;
  }
}

@media (max-width: 320px) {
  .container {
    padding: 15px 5px;
  }

  .text-container h2 {
    font-size: 18px;
  }

  .text-container p {
    font-size: 10px;
  }

  .image-container img {
    width: 25px;
    height: 25px;
  }
}

@media (max-width: 300px) {
  .container {
    margin-left: 0;
    padding: 10px;
  }

  .text-container h3,
  .text-container h2 {
    font-size: 18px;
  }

  .text-container p {
    font-size: 10px;
  }

  .image-container {
    margin: 0 auto;
    gap: 5px;
    margin-left: -44px;
    margin-top: -40px;
  }

  .image-container img {
    width: 25px;
    height: 25px;
  }
}

